#49 fixed compile error